2009-03-12  Adam Roben  <aroben@apple.com>

        Adopt setThreadNameInternal on Windows

        Also changed a Windows-only assertion about thread name length to an
        all-platform log message.

        Reviewed by Adam Treat.

        * wtf/Threading.cpp:
        (WTF::createThread): Warn if the thread name is longer than 31
        characters, as Visual Studio will truncate names longer than that
        length.

        * wtf/ThreadingWin.cpp:
        (WTF::setThreadNameInternal): Renamed from setThreadName and changed
        to always operate on the current thread.
        (WTF::initializeThreading): Changed to use setThreadNameInternal.
        (WTF::createThreadInternal): Removed call to setThreadName. This is
        now handled by threadEntryPoint and setThreadNameInternal.

2009-03-11  David Kilzer  <ddkilzer@apple.com>

        Clarify comments regarding order of FEATURE_DEFINES

        Rubber-stamped by Mark Rowe.

        * Configurations/JavaScriptCore.xcconfig: Added warning about
        the consequences when FEATURE_DEFINES are not kept in sync.

2009-03-11  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - WTF support for fixing <rdar://problem/3919124> Thai text selection
          in Safari is incorrect

        * wtf/unicode/icu/UnicodeIcu.h:
        (WTF::Unicode::hasLineBreakingPropertyComplexContext): Added. Returns
        whether the character has Unicode line breaking property value SA
        ("Complex Context").
        * wtf/unicode/qt4/UnicodeQt4.h:
        (WTF::Unicode::hasLineBreakingPropertyComplexContext): Added an
        implementation that always returns false.

2009-03-11  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        Give threads names on platforms with pthread_setname_np.

        * wtf/Threading.cpp:
        (WTF::NewThreadContext::NewThreadContext): Initialize thread name.
        (WTF::threadEntryPoint): Call setThreadNameInternal.